<resources>
    <string name="app_name">BusComplain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="send_title">확인</string>
    <string name="search_hint">버스 검색</string>
    <string name="title_text">제목</string>
    <string name="division_text">구분</string>
    <string name="name_text">작성자</string>
    <string name="phone_text">휴대번호</string>
    <string name="company_text">업체명</string>
    <string name="line_text">노선번호</string>
    <string name="car_text">차량번호</string>
    <string name="password_text">비밀번호</string>
    <string name="remarks_text">내용</string>
    <string name="change_text">변경</string>

    <string-array name="division_array">
        <item>무정차</item>
        <item>불친절</item>
        <item>난폭운전</item>
        <item>기타</item>
    </string-array>
</resources>
